fix: bold formatting

--- a/debug_story.tex
+++ b/debug_story.tex
@@ -2,6 +2,7 @@
 \usepackage{xpinyin}
 \usepackage{setspace} % Package to control spacing
 \usepackage{reledmac} % three column footnotes
+\usepackage[a4paper, total={7.5in, 10in}]{geometry}
 \arrangementX[A]{threecol}
 \let\footnote\footnoteA
 \renewcommand{\baselinestretch}{2} % Adjust line spacing globally
@@ -15,25 +16,25 @@
 
 \section*{Generated Graded Reader}
 
-\xpinyin*{(王明) 和 (李华) 是好朋友。}
-\xpinyin*{(王明) 住在 \underline{学校}\footnote{\label{1} school} 旁边。}
+\xpinyin*{\textbf{王明} 和 \textbf{李华} 是好朋友。}
+\xpinyin*{\textbf{王明} 住在 \underline{学校}\footnote{\label{1} school} 旁边。}
 \xpinyin*{今天是星期六，他们去 \underline{公园}\footnote{\label{2} park} 玩。}
-\xpinyin*{(李华) 喜欢 \underline{跑步}\footnote{\label{3} running}，但是 (王明) 觉得 \underline{跑步}\footnotemark[3] 很累。}
+\xpinyin*{\textbf{李华} 喜欢 \underline{跑步}\footnote{\label{3} running}，但是 \textbf{王明} 觉得 \underline{跑步}\footnotemark[3] 很累。}
 \xpinyin*{他们坐在 \underline{椅子}\footnote{\label{4} chair} 上休息。}
-\xpinyin*{(王明) 说：“我们去 \underline{商店}\footnote{\label{5} store} 吃点东西吧！”}
-\xpinyin*{(李华) 说：“好啊，我想喝 \underline{牛奶}\footnote{\label{6} milk}。”}
+\xpinyin*{\textbf{王明} 说：“我们去 \underline{商店}\footnote{\label{5} store} 吃点东西吧！”}
+\xpinyin*{\textbf{李华} 说：“好啊，我想喝 \underline{牛奶}\footnote{\label{6} milk}。”}
 \xpinyin*{他们去 \underline{商店}\footnotemark[5] 买了 \underline{牛奶}\footnotemark[6] 和 \underline{面包}\footnote{\label{7} bread}。}
 \xpinyin*{吃完后，他们一起回家了。}
 
 
-\xpinyin*{ 晚上，(王明) 在家 \underline{看书}\footnote{\label{8} reading}。}
+\xpinyin*{ 晚上，\textbf{王明} 在家 \underline{看书}\footnote{\label{8} reading}。}
 \xpinyin*{他喜欢 \underline{历史}\footnote{\label{9} history} 书，也喜欢 \underline{小说}\footnote{\label{10} novels}。}
-\xpinyin*{(王明) 的 \underline{妈妈}\footnote{\label{11} mother} 说：“别看太久，早点 \underline{睡觉}\footnote{\label{12} sleep}。”}
-\xpinyin*{(王明) 说：“好的，妈妈！”}
-\xpinyin*{第二天早上，(王明) 去 \underline{超市}\footnote{\label{13} supermarket} 买 \underline{鸡蛋}\footnote{\label{14} eggs} 和 \underline{蔬菜}\footnote{\label{15} vegetables}。}
+\xpinyin*{\textbf{王明} 的 \underline{妈妈}\footnote{\label{11} mother} 说：“别看太久，早点 \underline{睡觉}\footnote{\label{12} sleep}。”}
+\xpinyin*{\textbf{王明} 说：“好的，妈妈！”}
+\xpinyin*{第二天早上，\textbf{王明} 去 \underline{超市}\footnote{\label{13} supermarket} 买 \underline{鸡蛋}\footnote{\label{14} eggs} 和 \underline{蔬菜}\footnote{\label{15} vegetables}。}
 \xpinyin*{他在 \underline{收银台}\footnote{\label{16} checkout counter} 付钱，然后回家做 \underline{早饭}\footnote{\label{17} breakfast}。}
-\xpinyin*{(李华) 来了，他说：“你做了什么？”}
-\xpinyin*{(王明) 说：“我做了 \underline{鸡蛋}\footnotemark[14] 和 \underline{米饭}\footnote{\label{18} rice}。”}
+\xpinyin*{\textbf{李华} 来了，他说：“你做了什么？”}
+\xpinyin*{\textbf{王明} 说：“我做了 \underline{鸡蛋}\footnotemark[14] 和 \underline{米饭}\footnote{\label{18} rice}。”}
 \xpinyin*{他们一起吃 \underline{早饭}\footnotemark[17]，然后去 \underline{图书馆}\footnote{\label{19} library} 学习。}
 
 
